--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <title>Inventario</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root"></div>
 
     <script type="module" src="/src/main.jsx"></script>
