--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <body>
     <div id="modal"></div>
     <div id="root"></div>
-
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
